<resources>
    <string name="app_name">Family Map</string>
    <string name="server_host">Server Host:</string>
    <string name="server_port">Server Port:</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="life_story_lines">Life Story Lines</string>
    <string name="show_lsl">SHOW LIFE STORY LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_ftl">SHOW FAMILY TREE LINES</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_sl">SHOW SPOUSE LINES</string>
    <string name="map_type">Map Type</string>
    <string name="map_type_description">BACKGROUND DISPLAY ON MAP</string>
    <string name="re_sync_data">Re-sync Data</string>
    <string name="re_sync_data_description">FROM FAMILY MAP SERVICE</string>
    <string name="logout">Logout</string>
    <string name="logout_description">RETURNS TO LOGIN SCREEN</string>
    <string name="first_name_description">FIRST NAME</string>
    <string name="last_name_description">LAST NAME</string>
    <string name="gender_description">GENDER</string>

    <string name="sign_in_button">SIGN IN</string>
    <string name="register_button">REGISTER</string>

    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_filter">Filter</string>
    <string name="title_activity_person">Person</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_search">Search</string>

    <string-array name="colors_array">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>
    <string-array name="map_type_array">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>

</resources>
