
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:columnCount="2"
        android:rowCount="8"
        android:layout_margin="8dp"

        android:orientation="horizontal">


        <TextView
            android:layout_column="0"
            android:layout_row="1"
            android:layout_height="25dp"
            android:layout_width="90dp"
            android:gravity="right"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/server_port"
            android:id="@+id/server_port"/>

        <TextView
            android:layout_column="0"
            android:layout_row="3"
            android:layout_height="25dp"
            android:layout_width="90dp"
            android:gravity="right"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/password"
            android:id="@+id/password"/>

        <TextView
            android:layout_column="0"
            android:layout_row="4"
            android:layout_height="25dp"
            android:layout_width="90dp"
            android:gravity="right"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/first_name"
            android:id="@+id/first_name"/>

        <TextView
            android:layout_column="0"
            android:layout_row="5"
            android:layout_height="25dp"
            android:layout_width="90dp"
            android:gravity="right"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/last_name"
            android:id="@+id/last_name"/>

        <TextView
            android:layout_column="0"
            android:layout_row="6"
            android:layout_height="25dp"
            android:layout_width="90dp"
            android:gravity="right"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/email"
            android:id="@+id/email"/>

        <TextView
            android:layout_column="0"
            android:layout_row="7"
            android:layout_height="25dp"
            android:layout_width="90dp"
            android:gravity="right"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:text="@string/gender"
            android:id="@+id/gender"/>

        <TextView
            android:layout_column="0"
            android:layout_row="0"
            android:layout_height="25dp"
            android:layout_width="90dp"
            android:gravity="right"
            android:layout_margin="5dp"
            android:padding="3dp"
            android:layout_marginTop="8dp"
            android:text="@string/server_host"
            android:id="@+id/server_host"/>

        <EditText
            android:layout_column="1"
            android:layout_row="0"
            android:layout_height="30dp"
            android:layout_width="215dp"
            android:padding="3dp"
            android:layout_marginTop="11dp"
            android:id="@+id/editText_server_host" />

        <EditText
            android:layout_column="1"
            android:layout_row="1"
            android:layout_height="30dp"
            android:layout_width="215dp"
            android:padding="3dp"
            android:layout_marginTop="8dp"
            android:id="@+id/editText_server_port" />

        <EditText
            android:layout_column="1"
            android:layout_row="2"
            android:layout_height="30dp"
            android:layout_width="215dp"
            android:padding="3dp"
            android:layout_marginTop="8dp"
            android:id="@+id/editText_user_name" />

        <EditText
            android:layout_column="1"
            android:layout_row="3"
            android:layout_height="30dp"
            android:layout_width="215dp"
            android:padding="3dp"
            android:layout_marginTop="8dp"
            android:password="true"
            android:id="@+id/editText_password" />

        <EditText
            android:layout_column="1"
            android:layout_row="4"
            android:layout_height="30dp"
            android:layout_width="215dp"
            android:padding="3dp"
            android:layout_marginTop="8dp"
            android:id="@+id/editText_first_name" />

        <EditText
            android:layout_column="1"
            android:layout_row="5"
            android:layout_height="30dp"
            android:layout_width="215dp"
            android:padding="3dp"
            android:layout_marginTop="8dp"
            android:id="@+id/editText_last_name" />

        <EditText
            android:layout_column="1"
            android:layout_row="6"
            android:layout_height="30dp"
            android:layout_width="215dp"
            android:padding="3dp"
            android:layout_marginTop="8dp"
            android:id="@+id/editText_email" />

        <RadioGroup
            android:layout_column="1"
            android:layout_row="7"
            android:layout_width="215dp"
            android:layout_height="30dp"
            android:padding="2dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:gravity="left"
            android:id="@+id/radio_group_gender">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_male"
                android:text="@string/male"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_female"
                android:text="@string/female"/>

        </RadioGroup>

        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:layout_height="25dp"
            android:layout_width="90dp"
            android:gravity="right"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:text="@string/user_name"
            android:id="@+id/user_name"/>


    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_button" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button" />

    </LinearLayout>

</LinearLayout>